# openmq-wp

./: Packet.md  PacketProperties.md  PacketType.md  PacketVariableHeader.md  README.md  portmapper.md
src/: CMakeLists.txt
src/build-script/: build-vs2010.bat  build-vs2015.bat  build-win64.bat  build.bat
src/comm-io/: CMakeLists.txt  comm-io-codec.cpp  comm-io-codec.hpp  comm-io.cpp  comm-io.hpp
src/comm-io/tests/: comm-io-ipaddress-test.cpp  comm-io-packetheader-test.cpp  comm-io-sysmessageid-test.cpp  comm-io-variant-struct-test.cpp  comm-io-variant-test.cpp
src/dump-packet/: CMakeLists.txt  dump-packet.cpp
src/msg4r/: CMakeLists.txt
src/msg4r/tests/: msg4r-compiler-test.cpp
